Closed Bug 411188 Opened 18 years ago Closed 18 years ago

days-from-date of leap year fails

Categories

(Core Graveyard :: XForms, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: aaronr, Unassigned)

References

Details

(Keywords: fixed1.8.1.13)

Attachments

(2 files)

If a user tries to get days-from-date from "2008-02-29" we return NaN instead of 13938. XSmiles and formsPlayer both return the correct value.
Attached file testcase
Attached patch patchSplinter Review
Calculation of leap years in nsSchemaValidatorUtils::GetMaximumMonthInDayFor is incorrect. Additionally, we don't handle the case where the time string ends with fractional seconds and is not followed by a Z or +/- timezone offset.
Attachment #306642 - Flags: review?(aaronr)
Attachment #306642 - Flags: review?(doronr)
Attachment #306642 - Flags: review?(doronr) → review+
Attachment #306642 - Flags: review?(aaronr) → review+
checked into trunk and 1.8 branch for msterlin
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.13
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: