[XForms] NPOTDB days-from-date of leap year fails. Bug 411188, p=msterlin r=doronr+aaronr